horizontal scroll bar fix try

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,16 +4,18 @@
   margin: 0;
   padding: 0;
   font-size: 16px;
-  overflow-x: hidden;
 }
 body {
   font-family: "Poppins", sans-serif;
   background-color: #151515;
-  overflow-x: hidden;
 }
 html {
-  overflow-x: hidden;
   scroll-behavior: smooth;
+}
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 ul {
